--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,12 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "jsx": "react-jsx",
+    "types": [
+      "react",
+      "react-native",
+      "react-native-gesture-handler"
+    ],
     "paths": {
       "@/*": [
         "./*"
